--- a/ui/html/footer.partial.tmpl
+++ b/ui/html/footer.partial.tmpl
@@ -1,5 +1,7 @@
 {{define "footer"}}
 <footer class="mt-auto d-flex flex-wrap justify-content-between align-items-center py-3 my-4 mx-6 border-top">
-    <p class="col-md-4 mb-0 text-body-secondary">© 2025 Created by <strong>user-xat</strong></p>
+    <p class="col-md-4 mb-0 text-body-secondary">
+        © 2025 Created by <a href="https://t.me/user_xat" class="text-decoration-none text-reset" target="_blank" rel="noopener noreferrer"><strong>user-xat</strong></a>
+    </p>
 </footer>
 {{end}}
