moving the application logic to a separate web package

--- a/assets/html/home.page.tmpl
+++ b/assets/html/home.page.tmpl
@@ -14,7 +14,7 @@
 {{if and . .Link}}
 <hr class="my-4">
 <div class="alert alert-success" role="alert">
-    Your short link: <a href="{{.Link.Short}}" class="alert-link" target="_blank" rel="noopener noreferrer">{{.Link.Short}}</a>
+    Your short link: <a href="{{.Link.Hashed}}" class="alert-link" target="_blank" rel="noopener noreferrer">{{.Link.Hashed}}</a>
 </div>
 {{end}}
 {{end}}
